[package]
name = "rcli"
version = "0.1.0"
authors = ["David Hsiang <davidhsiang524@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
